# project1-policy-rag-assistant

./: .gitignore  README.md  pyproject.toml
src/policy_rag/api/: app.py  models.py  routes_chat.py  routes_ingest.py  routes_summary.py
src/policy_rag/cli/: app.py  ask_cmd.py  chunk_cmd.py  index_cmd.py  ingest_cmd.py  parse_cmd.py  search.py  search_cmd.py  summarize_cmd.py
src/policy_rag/config/: settings.py
src/policy_rag/index/: chroma_store.py
src/policy_rag/ingestion/: chunking.py  indexing.py  loader_pdf.py  validators.py
src/policy_rag/llm/: embeddings.py  llm_client.py
src/policy_rag/prompts/: policy_card_prompt.py  qa_prompt.py
src/policy_rag/retrieval/: evidence_gate.py  quote_verify.py  retriever.py
src/policy_rag/schemas/: answer.py  structured_answer.py
src/policy_rag/utils/: json_extract.py
